bug(#33): The dashboard is always visible
Removed display properties for the simulation dashboard.

--- a/smart-home-simulator/src/main/resources/static/css/dashboard.css
+++ b/smart-home-simulator/src/main/resources/static/css/dashboard.css
@@ -124,10 +124,6 @@ input:checked + .slider:before {
 
 }
 
-#simulator {
-    visibility: hidden;
-}
-
 .params {
     margin-top: 10px;
     width: 100%;
